# finance-multi-agent-app

./: README.md  pyproject.toml
finance-agent/: app.py
finance-agent/agents/: csv_agent.py  memory_agent.py  mrkl_agent.py
finance-agent/controller/: controller_agent.py
