[tool.poetry]
name = "finance-analyst-agent"
version = "0.1.0"
description = ""
authors = ["Sarvagya Agrawal"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "finance_analyst_agent"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain = {version = ">=0.1.0"}
openai = ">=1.6.1"
duckduckgo-search = ">4.0"
pypdf = "^3.12.2"
sentence-transformers = "^2.2.2"
torch = ">=2.0.0, !=2.0.1"
tabulate = "^0.9.0"
streamlit-feedback = "^0.0.9"
streamlit = ">=1.26"
docarray = "^0.38.0"
hnswlib = "^0.7.0"
langchain-community = ">=0.3.0"
numexpr = "^2.8.8"
langchainhub = "^0.1.14"
langgraph = "^0.6.7"
langchain-experimental = "^0.3.4"
langchain-huggingface = "^0.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
